@@ -1,5 +1,3 @@
-DIST kadu-0.6.0.1.tar.bz2 1566609 RMD160 06709d16dd84a10c917fb12ee3dd06eb4ef18879 SHA1 727c5b25b7178f8d947497182da6817c170b7d6a SHA256 5b022f3043b112bbba6115bdf2877ff01d6b3b1342d74db5977fa92b1662d68c
 DIST kadu-0.6.0.2.tar.bz2 1568547 RMD160 2e8952831cada064c1caa65b943b6e44880b39c3 SHA1 efbae7840078eab46c5ac20d6e7397cf1c1457bd SHA256 8e06b554761e39890e48ba723145d4e1e0919cc84fcd978f215a6e2a30f87bfa
-EBUILD kadu-migration-0.6.0.1.ebuild 241 RMD160 fe86c259856fa4fd15ef627a948099f92e96f5b1 SHA1 73b7479007df0d8a384f8ee73622b90ce24cf435 SHA256 403a9d46989ec18878ef14421adf2bdb477fbdece4efe094b3d5fe6172ec2258
 EBUILD kadu-migration-0.6.0.2.ebuild 241 RMD160 fe86c259856fa4fd15ef627a948099f92e96f5b1 SHA1 73b7479007df0d8a384f8ee73622b90ce24cf435 SHA256 403a9d46989ec18878ef14421adf2bdb477fbdece4efe094b3d5fe6172ec2258
-MISC ChangeLog 409 RMD160 f1ebc7afaa30678fb35e9ce698f0544d53e1958a SHA1 3b0812cb9a27d918ceeb471656a46c0ddb6c703c SHA256 d2edb15d7dfcc838743e9d3ad7211c45e82efd8588a965cc005bd0ac65565298
+MISC ChangeLog 510 RMD160 d046bd24466ffed6b9e69603d277240dc90eb71b SHA1 d488c4bb74652ab4e06591c582facca8cd6af10f SHA256 4635669c0d918dc85fd79dc8367a1202b621133aa068ba3838906681c63ba82e
