@@ -1,6 +1,0 @@
-inherit kadu-module
-
-SRC_URI="http://www.kadu.net/download/stable/kadu-${K_PV}.tar.bz2"
-DESCRIPTION="Vital Kadu module that provides configuration import mechanism from previous version (0.4)"
-HOMEPAGE="http://kadu.net"
-KEYWORDS="amd64 x86"
